BehaviorDoesNotUnderstand using the new Machine.CreateClass methods
IBehavior in constructors
BaseBehavior now receives an IBehavior as first parameter in constructor
NativeBehavior now receives an IBehavior as first constructor parameter
nil removed as GlobalObject in Machine
Machine.UndefinedObjectClass
Machine.ClassClass
Machine.MetaClassClass
Send bytecode use Machine.UndefinedObjectClass if receiver is null
Object.st new test
Class.st new test, defining Class protocol
Behavior.st new test, defining compile: in Behavior. Knot: Behavior is Object class superclass.
Class.st, Library.st: Knot added: Class is Object class superclass. Removed from Machine source code.

2010-11-21
Test splited: Object.st + ObjectTest.st, Behavior.st + BehaviorTest.st, Class.st + ClassTest.st
New parsing of binary operators
Define = == methods in Object.st with Tests in ObjectTest.st
Define ~= ~~ methods in Object.st with Tests in ObjectTest.st
ObjectOperators.Same, .Negate, .IsNull
Fixing bug: aBoolean ifTrue: [self ... ] <-- self was null. Now, using LocalBlock, quick hack
Tests: new folders Library, LibraryTests
Test.st for testing
Object>>error:
Primitives.RaiseException
ErrorException

2010-11-22
LocalBlock deleted
block.Closure points to external ExecutionBlock
new Block(block, executionclosure)
New ExecutionBlock constructor using block.Closure
ExecutionBlock.NoLocals, .NoParentLocals, .NoArguments, .NoParentArguments
All this to implement closure in blocks

2011-09-16
AST with first TreeParser and tests

2011-09-17
AST Removed
Model, IExpression, ConstantExpression, InstanceVariableExpression, SelfExpression
and MessageExpresion
ModelParse with tests
IExpression.AsString with tests
CompositeExpression with tests
MethodModel with parse and initial tests

2011-09-18
SetExpression with parse support and tests
Local variables in method parse with tests
ReturnExpression with parse support and tests

Angel "Java" Lopez
http://www.ajlopez.com/en
http://ajlopez.wordpress.com/