@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Compilers\Javascript\CompilerTests.cs" />
     <Compile Include="Model\ModelParserTests.cs" />
     <Compile Include="EvaluateTests.cs" />
     <Compile Include="Hosting\HostTests.cs" />
