@@ -1,0 +1,70 @@
+﻿namespace AjTalk.Tests.Compilers.Javascript
+{
+    using System;
+    using System.Collections.Generic;
+    using System.Linq;
+    using System.Text;
+    using AjTalk.Model;
+    using AjTalk.Compilers.Javascript;
+    using Microsoft.VisualStudio.TestTools.UnitTesting;
+    using System.IO;
+
+    [TestClass]
+    public class CompilerTests
+    {
+        private Compiler compiler;
+        private StringWriter writer;
+
+        [TestInitialize]
+        public void Setup()
+        {
+            this.writer = new StringWriter();
+            this.compiler = new Compiler(this.writer);
+        }
+
+        [TestMethod]
+        public void CompileSimpleMethod()
+        {
+            MethodModel method = ParseMethod("with: a with: b ^a+b");
+            this.compiler.CompileMethod(method);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function $with_with(a, b)"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "return a + b;"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+        }
+
+        [TestMethod]
+        public void CompileSimpleMethodWithSet()
+        {
+            MethodModel method = ParseMethod("with: a with: b a := b");
+            this.compiler.CompileMethod(method);
+            this.writer.Close();
+            string output = this.writer.ToString();
+            Assert.IsTrue(ContainsLine(output, "function $with_with(a, b)"));
+            Assert.IsTrue(ContainsLine(output, "{"));
+            Assert.IsTrue(ContainsLine(output, "a = b;"));
+            Assert.IsTrue(ContainsLine(output, "}"));
+        }
+
+        private static MethodModel ParseMethod(string text)
+        {
+            ModelParser parser = new ModelParser(text);
+            return parser.ParseMethod();
+        }
+
+        private static bool ContainsLine(string text, string line)
+        {
+            StringReader reader = new StringReader(text);
+
+            string ln;
+
+            while ((ln = reader.ReadLine()) != null)
+                if (line == ln.Trim())
+                    return true;
+
+            return false;
+        }
+    }
+}
