@@ -1,0 +1,7 @@
+﻿namespace AjTalk.Model
+{
+    public interface IVisitable
+    {
+        void Visit(IVisitor visitor);
+    }
+}
