@@ -11,5 +11,10 @@
         {
             return "self";
         }
+
+        public void Visit(IVisitor visitor)
+        {
+            visitor.Visit(this);
+        }
     }
 }
